homework2 is done

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="backgroundText">#84c0c5</color>
     <color name="colorText">#ffffff</color>
+    <color name="white">#ffffff</color>
 </resources>
