--- a/app/src/main/res/layout/activity_additem.xml
+++ b/app/src/main/res/layout/activity_additem.xml
@@ -7,12 +7,22 @@
     android:background="@drawable/bg_pattern"
     tools:context=".AddItemActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:elevation="4dp"
+        android:layout_height="?android:attr/actionBarSize"
+        android:background="@color/colorPrimary"
+
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="68dp"
         android:background="@color/white"
         android:gravity="center_vertical"
+        android:elevation="2dp"
         android:paddingLeft="22dp"
         android:paddingRight="22dp">
 
