--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-   <android.support.design.widget.TabLayout
-       android:id="@+id/tabLayout"
-       android:background="@color/colorPrimary"
-       android:layout_width="match_parent"
-       android:layout_height="?android:attr/actionBarSize">
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        >
 
-   </android.support.design.widget.TabLayout>
-
-   <android.support.v4.view.ViewPager
-       android:id="@+id/viewPager"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"/>
-
-
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
+            android:layout_width="match_parent"
+            android:layout_height="?android:attr/actionBarSize"
+            android:background="@color/colorPrimary"
 
 
-</LinearLayout>
+            />
+
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+
+            android:layout_height="?android:attr/actionBarSize"
+            android:background="@color/colorPrimary">
+
+        </android.support.design.widget.TabLayout>
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.view.ViewPager
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+
+        app:fabSize="normal"
+        android:src="@drawable/ic_add_grey_24dp"
+        android:tint="@color/white"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_gravity="end|bottom"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+
+
+        />
+
+
+</android.support.design.widget.CoordinatorLayout>
