--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimaryDark">#02A797</color>
+    <color name="colorAccent">#00574B</color>
     <color name="backgroundText">#84c0c5</color>
     <color name="colorText">#ffffff</color>
     <color name="white">#ffffff</color>
