homework7 is done add menu hide fab add ConfirmationDialog and Adapter

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="white">#ffffff</color>
     <color name="colorItem">#FFC31E</color>
     <color name="colorItemDark">#AA6404</color>
+    <color name="colorItemSelected">#663B01</color>
+
+    <color name="colorShadow">#38383838</color>
 </resources>
