--- a/app/src/main/res/layout/item_record1.xml
+++ b/app/src/main/res/layout/item_record1.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
+    android:background="@drawable/item_bg"
     android:orientation="horizontal">
     <!--android:layout_marginLeft="10dp"-->
     <!--android:layout_marginTop="5dp"-->
@@ -14,7 +14,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:background="@color/colorItem"
+
         android:padding="16dp"
         android:text="Молоко"
         android:textColor="@color/colorText" />
@@ -23,7 +23,7 @@
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="@color/colorItemDark"
+        android:background="@color/colorShadow"
         android:gravity="center"
         android:padding="16dp"
         android:text="55₽"
